project completed and submitted

--- a/hci-practical2/report/report.tex
+++ b/hci-practical2/report/report.tex
@@ -459,7 +459,7 @@ An operation entails moving the mouse to a different region on the screen, click
 \label{tab:b1}
 \end{table}
 
-\begin{table}[h!]
+\begin{table}[t]
 
 \centering
 \caption{Subject B, Software 2}
